# myProfile

./: .bashrc  .vimrc  .zshrc  CMakeLists.txt  README.md  ansible-2.1.1.0-52.1.x86_64.rpm  org.apache.hadoop.hdfs.server.namenode.TestBackupNode-output.txt  python-devel-2.6.8-0.15.1.x86_64.rpm  python-setuptools-0.6c8-10.19.2.1.x86_64.rpm  sshpass-1.05-10.1.x86_64.rpm
.vim/plugin/: potts.vim
new/: pcre-devel-7.8-2.18.x86_64.rpm  python-cryptography-0.4-2.1.4.x86_64.rpm  python-setuptools-5.4.1-51.1.x86_64.rpm
